--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,18 @@
             <version>0.11.2</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.27.0</version>
+        </dependency>
     </dependencies>
 
     <build>
