--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,13 @@ spring.jpa.generate-ddl = false
 spring.jpa.show-sql = false
 spring.jpa.open-in-view = false
 
+application.uploader.cloud-name=
+application.uploader.api-key=
+application.uploader.api-secret=
+
+spring.servlet.multipart.max-file-size=1500KB
+spring.servlet.multipart.max-request-size=2500KB
+
 #Logging
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
